--- a/CodeGymPlugin.properties
+++ b/CodeGymPlugin.properties
@@ -1,10 +1,10 @@
-#Sun Aug 16 00:35:11 CEST 2020
+#Sun Aug 16 15:55:43 CEST 2020
 codegym.level.filter=-1
 codegym.query.filter=
 codegym.session.id=f5a99398-cea4-49e3-8c29-37f45f21b946
 codegym.skip.set.autoscrolls=true
 codegym.quest.filter=QUEST_JAVA_COLLECTIONS
 codegym.status.filter=ASSIGNED
-codegym.last.task.key=com.codegym.task.task22.task2213.big17
+codegym.last.task.key=com.codegym.task.task34.task3411
 codegym.user.secretkey=6b0e2ed0-6698-44ff-b3c9-3dad855a032a
-codegym.last.task.path=C\:/Users/durov/OneDrive/CodeGymTasks/4.JavaCollections/src/com/codegym/task/task22/task2213
+codegym.last.task.path=C\:/Users/durov/OneDrive/CodeGymTasks/4.JavaCollections/src/com/codegym/task/task34/task3411
